--- a/src/components/hero-section/hero-section.module.scss
+++ b/src/components/hero-section/hero-section.module.scss
@@ -15,6 +15,7 @@
   padding-top: 48px;
   padding-bottom: 48px;
   width: 100%;
+  border-radius: 15px;
 }
 
 .leftSideContainer {
@@ -26,7 +27,7 @@
 
 .actions {
   display: flex;
-  gap: 8px;
+  column-gap: 16px;
 }
 
 .heading {
@@ -38,4 +39,7 @@
   display: flex;
   flex-direction: column;
   row-gap: 16px;
+}
+.addressPicker {
+  border-radius: 16px;
 }
